[gd_scene load_steps=4 format=3 uid="uid://dl4stiafram03"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_hfcv2"]
[ext_resource type="AudioStream" uid="uid://d1lkh8r6tom57" path="res://assets/music/background/Elevator.ogg" id="3_0l638"]
[ext_resource type="AudioStream" uid="uid://661qjyjklrvq" path="res://assets/music/Victory.mp3" id="3_musoy"]

[node name="World" type="Node2D"]
script = ExtResource("1_hfcv2")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0l638")
volume_db = -15.0
autoplay = true

[node name="LevelComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_musoy")

[node name="NextLevel" type="Timer" parent="."]
wait_time = 2.1

[connection signal="timeout" from="NextLevel" to="." method="_on_next_level_timeout"]
